3 September 2004:  Menelaos Karavelas
- added chapter author

28 August 2004:  Menelaos Karavelas
- Parabola_2.h: added hack in order to avoid nasty warning about
  static variables that appears on Darwin with G++ 3.4
- moved join_vertices (which was unused) from AGDS2 to TDS2

4 August 2004:  Menelaos Karavelas
- added image files in the PNG format for the PDF version of the manual
- fixed problem with hardcoded .eps extension in the manual files

24 June 2004:  Menelaos Karavelas
- added fix for SGI compiler for the kernel wrapper
- fixed warning for testsuite when CGAL_NO_ASSERTIONS is defined.

5 June 2004:  Menelaos Karavelas
- changed name of line argument in Parabola_2 constructor to avoid
  warning of SunPro CC compiler

14 May 2004:  Menelaos Karavelas <mkaravel@cse.nd.edu>
- warning of SunPro CC 5.30 for uninitialized variable in
  Ag2_infinite_edge_test_C2.h

13 May 2004:  Menelaos Karavelas <mkaravel@cse.nd.edu>
- replaced Vertex_handle(NULL) by Vertex_handle()
- replaced comparisons of vertex and face handles against NULL by
  comparisons against {Vertex,Face}_handle()
- updated the makefile for the demo (removed the -g flag and old comments)

2 May 2004:  Menelaos Karavelas <mkaravel@cse.nd.edu>
- bug fix for VC 7.1 in test suite
- bug fix for sun compiler in Apollonius_graph_2.h

28 April 2004:  Menelaos Karavelas <mkaravel@cse.nd.edu>
- fixed bugs in test suite and examples, created by the changes of April 25th

26 April 2004:  Menelaos Karavelas <mkaravel@cse.nd.edu>
- CC-5.30_SunOS-5.8 was complaining about the static constants of the
  Parabola_2 and Hyperbola_ray_2 classes; these constants are now given
  my static methods

25 April 2004:  Menelaos Karavelas <mkaravel@cse.nd.edu>
- changes in the traits: moved the various functors from
  predicates/Apollonius_graph_predicates_C2.h to separate files named
  predicates/Ag2_*.h; the two traits classes have been appropriately modified